--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div class="social">
 	<div class="blog">
-		<a href="https://medium.com/@LumosAutomation" target="_blank">Blog</a>
+		<a href="https://medium.com/@getshortrapp" target="_blank">Blog</a>
 	</div>
 	<div class="facebook">
 		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fgetshortrapp&amp;width=60&amp;layout=button&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:60px; height:35px;" allowTransparency="true"></iframe>
