--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="shortcut icon" href="./images/icon.png" >
+<link rel="shortcut icon" href="./images/Shorter_favicon.png" >
 <title>Shortr: Tech News in Short</title>
 <META NAME="Description" CONTENT="Shortr is a mobile app that allows you to follow your favorite topics in tech and get short updates of 50 words whenever anything new happens!">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
