--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <!--Real Time Tech News Alerts on your favorite topics with summary in less than 50 words -->
 <div id="tagline">
-	<h1>News on Tech-Topics that matter to you summarized in 50 words.</h1>
+	<h1>Tech News that matter to you in 50 words.</h1>
 </div>
 
 <div class="email_signup_form">
