Changed background size property

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 	<div class="blog">
 		<a href="https://medium.com/@getshortrapp" target="_blank">Blog</a>
 	</div>
+	<div class="blog">
+		<a href="https://medium.com/@getshortrapp/shortr-faq-s-4366d94cfe13" target="_blank">FAQ's</a>
+	</div>
 	<div class="facebook">
 		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fgetshortrapp&amp;width=60&amp;layout=button&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:60px; height:35px;" allowTransparency="true"></iframe>
 	</div>			
