Changed background size property

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 	<script type="text/javascript">
 	window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
 	</script>
+	</div>
+	<div class="contactus">
+		<a href="mailto:tarkeshwar@getshortrapp.com" target="_blank">Contact Us</a>
 	</div>		
 </div>
 </body>
