--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <META NAME="Description" CONTENT="Shortr is a mobile app that allows you to follow your favorite topics in tech and get short updates of 50 words whenever anything new happens!">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta property="og:title" content="Shortr"/>
+<meta property="og:description" content="Shortr is a mobile app that allows you to follow your favorite topics in tech and get short updates of 50 words whenever anything new happens!"/>
+<meta property="og:type" content="News App"/>
+<meta property="og:url" content="http://getshortrapp.com/"/>
+<meta property="og:image" content="http://getshortrapp.com/images/backgroundimage6.png"/>
 <link href="./css/main.css" rel="stylesheet" type="text/css" media="all"/>
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
