--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:image" content="http://getshortrapp.com/images/backgroundimage6.png"/>
 <link href="./css/main.css" rel="stylesheet" type="text/css" media="all"/>
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,500' rel='stylesheet' type='text/css'>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,6 +28,8 @@
 </head>
 <body>
 
+<div id="fold1">
+<div class="wrap">
 <div id="logo">
 	<img src="./images/Shortr_Logo.png" alt="Shortr Logo">
 </div>
@@ -36,6 +38,7 @@
 	<h1>Tech News that matter to you in 50 words.</h1>
 </div>
 
+<div id="hack">
 <div class="email_signup_form">
 <form action="http://getlumos.us9.list-manage.com/subscribe/post?u=899fa9d8d9877aaf6f7557c3e&amp;id=7d0b324eca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -46,7 +49,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_899fa9d8d9877aaf6f7557c3e_7d0b324eca" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <input type="submit" value="" name="subscribe" id="mc-embedded-subscribe" class="button">
     </div>
 </form>
 
@@ -77,6 +80,110 @@
 	<div class="contactus">
 		<a href="mailto:tarkeshwar@getshortrapp.com" target="_blank">Contact Us</a>
 	</div>		
+</div>
+
+</div>
+</div>
+<div class="clear"></div>
+<div id="fold2">
+	<div class="wrap">
+		<h1>How does it work?</h1>
+		<table>
+			<tr>
+				<td>
+					<img src="./images/topics.png">
+					<h2>Follow Topics</h2>
+					<p>Choose from a variety of niche tech topics</p>
+				</td>
+				<td>
+					<img src="./images/curatedstories.png">
+					<h2>Get Curated Stories</h2>
+					<p>Handpicked stories from varied sources summarized in 50 words!</p>
+				</td>
+			</tr>
+		</table>
+	</div>
+</div>
+
+<div class="clear"></div>
+<div id="fold3">
+<div class="wrap">
+	<h1>Some Common Topics</h1>
+		<table>
+			<tr>
+				<td>
+					<h2>General</h2>
+					<li> - IoT</li>
+					<li> - Bitcoin</li>
+					<li> - Wearables</li>
+					<li> - Trending Products</li>
+					<li> - And Many More...</li>
+				</td>
+				<td>
+					<h2>Niche</h2>
+					<li> - Node.Js</li>
+					<li> - Angular.Js</li>
+					<li> - Time Series Databases</li>
+					<li> - GoLang</li>
+					<li> - And Many More...</li>
+				</td>
+			</tr>
+		</table>
+</div>
+</div>
+<div class="clear"></div>
+<div id="fold4">
+	<div class="wrap">
+		<h1>
+			Want to check some sample summaries?
+		</h1>
+		<div class="tableborder">
+		<table>
+				<tr>
+					<td><img src="./images/atScript.png"></td>
+					<td>
+						<h2>
+							<a href="http://bit.ly/1EUGWrX" target="_blank">Google and Microsoft collaborate to build AngularJS 2.0 on TypeScript</a>
+						</h2>
+						<p>
+							 TypeScript 1.5 release in the next few weeks will be the first results of collaboration. TypeScript will absorb advanced features of AtScript like Annotations. Annotations is a way to add metadata to class declarations for use by dependency injection or compilation directives.
+						</p>
+					</td>
+				</tr>
+		</table>
+		</div>
+		<div class="tableborder">
+		<table>
+				<tr>
+					<td><img src="./images/beatsmusic.png"></td>
+					<td>
+						<h2>
+							<a href="http://bit.ly/applebeats1" target="_blank">Apple to launch music streaming service in June</a>
+						</h2>
+						<p>
+							The proposed service will be based on Beat's music streaming service but will be iTunes branded. The service will also support major non-Apple platforms like the web and Android. Apple is planning to offer paid subscription at $7.99/month, $2 less than current Spotify and Rdio rates.
+						</p>
+					</td>
+				</tr>
+		</table>
+		</div>
+	</div>
+</div>
+<div class="clear"></div>
+<div id="footer">
+	<div class="wrap">
+	<div id="footersocial">
+	<div class="blog">
+		<a href="https://medium.com/@getshortrapp" target="_blank">Blog</a>
+	</div>
+	<div class="blog">
+		<a href="https://medium.com/@getshortrapp/shortr-faq-s-4366d94cfe13" target="_blank">FAQ's</a>
+	</div>
+	<div class="contactus">
+		<a href="mailto:tarkeshwar@getshortrapp.com" target="_blank">Contact Us</a>
+	</div>		
+</div>
+</div>
 </div>
 </body>
 </html>
