changed entire website

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<li> - Bitcoin</li>
 					<li> - Wearables</li>
 					<li> - Trending Products</li>
-					<li> - And Many More...</li>
+					<li> - And many more...</li>
 				</td>
 				<td>
 					<h2>Niche</h2>
@@ -125,7 +125,7 @@
 					<li> - Angular.Js</li>
 					<li> - Time Series Databases</li>
 					<li> - GoLang</li>
-					<li> - And Many More...</li>
+					<li> - And many more...</li>
 				</td>
 			</tr>
 		</table>
