--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:description" content="Shortr is a mobile app that allows you to follow your favorite topics in tech and get short updates of 50 words whenever anything new happens!"/>
 <meta property="og:type" content="Website"/>
 <meta property="og:image" content="http://getshortrapp.com/images/backgroundimage6.png"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./css/main.css" rel="stylesheet" type="text/css" media="all"/>
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,500' rel='stylesheet' type='text/css'>
@@ -76,10 +77,7 @@
 	<script type="text/javascript">
 	window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
 	</script>
-	</div>
-	<div class="contactus">
-		<a href="mailto:tarkeshwar@getshortrapp.com" target="_blank">Contact Us</a>
-	</div>		
+	</div>	
 </div>
 
 </div>
@@ -158,7 +156,7 @@
 					<td><img src="./images/beatsmusic.png"></td>
 					<td>
 						<h2>
-							<a href="http://bit.ly/applebeats1" target="_blank">Apple to launch music streaming service in June</a>
+							<a href="http://bit.ly/applebeats1" target="_blank">Apple to launch music streaming service in June at WWDC</a>
 						</h2>
 						<p>
 							The proposed service will be based on Beat's music streaming service but will be iTunes branded. The service will also support major non-Apple platforms like the web and Android. Apple is planning to offer paid subscription at $7.99/month, $2 less than current Spotify and Rdio rates.
