--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
 
 <div id="fold1">
 <div class="wrap">
+<div id="fold1content">
 <div id="logo">
-	<img src="./images/Shortr_Logo.png" alt="Shortr Logo">
+	<img src="./images/Shortr_modified_textlogo1.png" alt="Shortr Logo">
 </div>
-<!--Real Time Tech News Alerts on your favorite topics with summary in less than 50 words -->
+<!--Real Time Tech News Alerts on your favorite topics with summary in less than 50 words 
+	Tech News, Blogs & Tutorials that matter to you in 50 words
+	Tech News & Blogs that matter to you in 50 words
+	Tech News that matter to you in 50 words.
+-->
 <div id="tagline">
-	<h1>Tech News that matter to you in 50 words.</h1>
+	<h1>Tech News, Blogs & Tutorials that matter to you in 50 words</h1>
 </div>
 
 <div id="hack">
@@ -45,7 +50,7 @@
     <div id="mc_embed_signup_scroll">
 	
 
-	<input type="text" value="Enter Email to participate in our beta." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to participate in our beta.';}" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="text" value="Enter Email to access the beta app now." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to access the beta app now.';}" name="EMAIL" class="required email" id="mce-EMAIL">
 		<!--<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -53,10 +58,13 @@
     <input type="submit" value="" name="subscribe" id="mc-embedded-subscribe" class="button">
     </div>
 </form>
-
 </div>
 </div>
-
+</div>
+<div id="nexusphonegif">
+	<img src="./images/Shortr.gif" alt="app screenshots">
+</div>
+<div class="clear"></div>
 <div class="social">
 	<div class="blog">
 		<a href="https://medium.com/@getshortrapp" target="_blank">Blog</a>
@@ -171,10 +179,10 @@
 <div id="footer">
 	<div class="wrap">
 	<div id="footersocial">
-	<div class="blog">
+	<div class="blog1">
 		<a href="https://medium.com/@getshortrapp" target="_blank">Blog</a>
 	</div>
-	<div class="blog">
+	<div class="blog1">
 		<a href="https://medium.com/@getshortrapp/shortr-faq-s-4366d94cfe13" target="_blank">FAQ's</a>
 	</div>
 	<div class="contactus">
