--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="mc_embed_signup_scroll">
 	
 
-	<input type="text" value="Enter Email to access the beta app now." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to access the beta app now.';}" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="text" value="Enter Email to access beta app now." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to access beta app now.';}" name="EMAIL" class="required email" id="mce-EMAIL">
 		<!--<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
