--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 	Tech News, Blogs & Tutorials that matter to you in 50 words
 	Tech News & Blogs that matter to you in 50 words
 	Tech News that matter to you in 50 words.
+	Tech News, Blogs & Tutorials that matter to you in 50 words
 -->
 <div id="tagline">
-	<h1>Tech News, Blogs & Tutorials that matter to you in 50 words</h1>
+	<h1>Discover Tech News, Blogs & Tutorials that matter to you in 50 words</h1>
 </div>
 
 <div id="hack">
