--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 	Tech News & Blogs that matter to you in 50 words
 	Tech News that matter to you in 50 words.
 	Tech News, Blogs & Tutorials that matter to you in 50 words
+	Enter email to join iOS betalist now.
 -->
 <div id="tagline">
-	<h1>Discover Tech News, Blogs & Tutorials that matter to you in 50 words</h1>
+	<h1>Discover Tech News, Blogs & Tutorials that matter to you in 50 words</h1></br></br>
+	<a class="androidbeta" href="https://plus.google.com/communities/117831444191773127889" target="_blank">Join Google+ Community to access Android beta app.</a>
 </div>
 
 <div id="hack">
@@ -51,7 +53,7 @@
     <div id="mc_embed_signup_scroll">
 	
 
-	<input type="text" value="Enter Email to access beta app now." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to access beta app now.';}" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="text" value="Enter Email to join iOS betalist now." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Email to join iOS betalist now.';}" name="EMAIL" class="required email" id="mce-EMAIL">
 		<!--<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>     real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
