changed underline thickness of join Google+ community

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 -->
 <div id="tagline">
 	<h1>Discover Tech News, Blogs & Tutorials that matter to you in 50 words</h1></br></br>
-	<a class="androidbeta" href="https://plus.google.com/communities/117831444191773127889" target="_blank">Join Google+ Community to access Android beta app.</a>
+	<a class="androidbeta" href="https://plus.google.com/communities/117831444191773127889" target="_blank"><u>Join Google+ Community to access Android beta app.</u></a>
 </div>
 
 <div id="hack">
